# payload2rdf

./: README.md  mappings.yaml  output.rdf  pyproject.toml
payload2rdf/: cli.py  extract.py  mapping.py  warc_reader.py
