[project]
name = "payload2rdf"
version = "0.1.0"
description = ""
authors = [
    {name = "FabioKn",email = "fabio.knoess@t-online.de"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "warcio (>=1.7.5,<2.0.0)",
    "extruct (>=0.18.0,<0.19.0)",
    "click (>=8.2.0,<9.0.0)",
    "rdflib (>=7.1.4,<8.0.0)",
    "w3lib (>=2.3.1,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]

[tool.poetry]
packages = [{include = "payload2rdf"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
payload2rdf = "payload2rdf.cli:cli"

